--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ header {
 }
 
 header .img-wrapper{
-    max-width: 10%;
+    width: 50%;
+    max-width: 200px;
 }
 
 .contenedor_logo_menu {
@@ -117,8 +118,6 @@ background: rgb(184, 184, 184);
     font-size: 40px;
     color: black;
     margin-bottom: 70px 0px;
-    
-
 }
 
 .icono{
@@ -142,9 +141,6 @@ background: rgb(184, 184, 184);
 
 /* SERVICIOS */
 
-.servicios{
-    margin-bottom: 70px;
-}
 
 .fotos{
 margin-bottom: 20px;
@@ -152,10 +148,7 @@ margin-bottom: 20px;
 }
 
 .thumb img{
-border-radius: 3px;
 width: 100%;
-vertical-align: top;
-
 }
 
 /* CLIENTES */
@@ -329,115 +322,59 @@ textarea {
 }
 
 
-/*. {
 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
-
-body {
-    background-color: blanchedalmond;
-    font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-
-
-
-header {
-
+.container-card {
+    position: relative;
     width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
+    background-color: red;
+  }
+  
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     text-align: center;
-}
-
-.div_menu {
-    padding: 5px;
-}
-
-.nav {
-    width: 100%;
-    background-color: rgb(235, 178, 110);
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    margin: -15px;
-    position: fixed;
-
-
-}
-
-.menu {
-
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    margin: 20px auto;
+  }
+  
+  .container-card:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container-card:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    background-color: #04AA6D;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
 
 
 
-}
 
-.menu li {
-    list-style: none;
-    margin: 10px;
-    display: inline-block;
 
-}
 
-.menu li a {
-    color: rgb(248, 242, 234);
-    font-size: 20px;
-    text-decoration: none;
-    font-weight: bolder;
 
-}
 
-.menu li a:hover {
-    padding: 5px 10px;
-    background: blanchedalmond;
-    border-radius: 15px;
-    color: black;
-}
+@media only screen and (max-width: 992px) {
+    .titulo{
+        font-size: 20px;
+    }
+  }
 
-#logo {
-    font-size: 20px;
-    color: black;
-    text-align: center;
-}
 
-.somos {
-
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: end;
-    justify-content: center;
-    background:  url(fotos/somos.jpg) ;
-    background-size: cover;
-    background-position: center;
-
-}
-
-#h2 {
-    text-align: center;
-}
-
-.foto_somos {
-    width: 75%;
-    height: 50%;
-    overflow: hidden;
-    position: static;
-    margin: auto auto;
-    border-radius: 20px;
-    visibility: hidden;
-}
-
-.foto_somos img {
-    width: 100%;
-    height: 100%;
-}
