--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 }
 
 body {
-    background-color:  whitesmoke !important;
+    background-color:  rgba(240, 234, 181, 0.733) !important;
     font-family: "Open Sans", Georgia, Times, 'Times New Roman', serif!important;
 
 }
 
 /* HEADER */
 header {
-    background: rgb(247, 185, 72);
+    background: rgba(240, 234, 181, 0.733);
 }
 
 header .img-wrapper{
@@ -102,7 +102,7 @@ header .img-wrapper{
 .somos{
 padding: 20px 0px;
 text-align: center;
-background: rgb(247, 185, 72);
+background: rgb(182, 181, 181);
 
 }
 
@@ -160,11 +160,12 @@ width: 100%;
 
 
 .clientes{
-    background: rgb(247, 185, 72);
+    background: rgb(182, 181, 181);
     padding: 40px 0px;
     text-align: center;
     font-family:"Open Sea", Arial, Helvetica, sans-serif;
     font-weight: 400;
+    
 }
 .clientestitulo{
     margin-bottom: 40px;
@@ -177,6 +178,7 @@ width: 100%;
 
 .nombrecliente{
     font-size: 20px;
+    
     
 }
 
@@ -203,6 +205,7 @@ width: 100%;
     margin: 0px 20px;
     background: rgb(72, 211, 7);
     font-weight: 700;
+    
 }
 
 .clientes a:hover{
@@ -294,7 +297,7 @@ textarea {
     text-align: center;
     padding: 20px 0px;
     margin-top: 30px;
-    background: rgb(247, 185, 72);;
+    background: rgb(182, 181, 181);;
     margin-bottom: 0px;
 }
 
