--- a/style.css
+++ b/style.css
@@ -7,20 +7,22 @@
 }
 
 body {
-    background-color:  rgba(240, 234, 181, 0.733) !important;
+    background-color:  white !important;
     font-family: "Open Sans", Georgia, Times, 'Times New Roman', serif!important;
 
 }
 
 /* HEADER */
 header {
-    background: rgba(240, 234, 181, 0.733);
+    background: white;
 }
 
 header .img-wrapper{
     width: 50%;
-    max-width: 200px;
+    max-width: 230px;
+    margin-left: 70px;
 }
+
 
 .contenedor_logo_menu {
     padding: 25px 0;
@@ -36,11 +38,13 @@ header .img-wrapper{
 
 .logo a img {
     vertical-align: top;
+    
 }
 
 .menu {
     text-align: right;
     line-height: 50px;
+    
 
 
 }
@@ -48,21 +52,20 @@ header .img-wrapper{
 .menu a {
     color: rgb(0, 0, 0);
     margin-left: 50px;
-    font-size: 15px;
+    font-size: 18px;
     padding: 7px;
     text-decoration: none;
     font-weight: 800;
-    border-radius: 1px;
-    border: 2px solid #000000;
+    
     
 }
 
-.menu a:hover {
+/*.menu a:hover {
     border-radius: 10px 10px 10px 10px;
     color: white;
-    background: black;
+    background: black;*/
+   
 
-}
 
 .contenedor-btns{
     margin-bottom: 100px;
@@ -102,26 +105,24 @@ header .img-wrapper{
 .somos{
 padding: 20px 0px;
 text-align: center;
-background: rgb(182, 181, 181);
-
+background: rgb(214, 97, 97);
+font-weight: 1000px;
+align-items: center;
+color: white;
 }
 
-/* INTENTO PONER CADROS BLANCOS SEPARADOS
-.somos1{
-    border-radius: 3px;
-    border: 2px solid black;
-    padding: 20px 10px;
-    margin: 0px 0px;
-    text-align: center;
+ INTENTO PONER CADROS BLANCOS SEPARADOS
+.primera_linea{
     background: white;
+    color: white;
 }
-*/
+
 .titulo{
     text-align: center;
     font-family: "Open Sea", Arial, Helvetica, sans-serif;
     font-weight: 300;
     font-size: 40px;
-    color: black;
+    color: rgb(252, 252, 252);
     margin-bottom: 70px 0px;
 }
 
@@ -142,10 +143,21 @@ background: rgb(182, 181, 181);
     line-height: 24px;
     font-weight: 400;
 }
-
+.container-card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(189, 184, 184);
+  }
+ 
+  .middle {
+    
+    position: absolute;
+   
+  }
+  
 
 /* SERVICIOS */
-
 
 .fotos{
 margin-bottom: 20px;
@@ -293,32 +305,36 @@ textarea {
 
 /* SOCIAL */
 
-.social{
+.final{
     text-align: center;
     padding: 20px 0px;
     margin-top: 30px;
     background: rgb(182, 181, 181);;
     margin-bottom: 0px;
 }
+.fotofinal{
+    width: 25%;
+    max-width: 150px;
+    
+}
 
-.social a{
-  /*  background: rgb(255, 255, 255);*/
+/*.social a{
+  background: rgb(255, 255, 255);
     display: inline-block;
     padding: 10px;
     margin: 0px 20px;
     width: 50px;
     font-size: 30px;
-   /* border-radius: 30px;
-    border: 2px solid rgb(243, 242, 242);*/
-    color: black;
-    
+   border-radius: 30px;
+    border: 2px solid rgb(243, 242, 242);
+    color: black;    
 }
 
 .social a:hover{
     text-decoration: none;
 
 }
-/*NO ME FUNCIONA*/
+/*NO ME FUNCIONA
 .linkedin i:hover{
     background: rgb(204, 183, 183);
 }
@@ -331,19 +347,7 @@ textarea {
 
 /* FOTOS PAPA DEBAJO DE SLIDER */
 
-.container-card {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(189, 184, 184);
-  }
- 
-  .middle {
-    
-    position: absolute;
-   
-  }
-  
+
 
 
 
