--- a/style.css
+++ b/style.css
@@ -94,13 +94,17 @@ header .img-wrapper{
 
 }
 
-/* FOTOS PAPA CON TEXTO*/
+/* Después slide*/
 
+.imagen_scroll{
+    background: linear-gradient(to top,  rgb(214, 97, 97) 0%, #f5f2f2 100%);    
+    
+}
 .algoinfo {
     margin-bottom: 0px;;
 }
 
-/* SOMOS */
+
 
 .somos{
 padding: 20px 0px;
@@ -144,7 +148,7 @@ color: white;
     font-weight: 400;
 }
 .container-card {
-    position: relative;
+    position: cover;
     width: 100%;
     height: 100%;
     background-color: rgb(189, 184, 184);
@@ -161,9 +165,28 @@ color: white;
 
 .fotos{
 margin-bottom: 20px;
+padding-top: 20px;
 
 }
 
+.icono{
+    margin-top: 30px;
+}
+.tituloazul{
+margin-left: 100px;
+position: relative;
+}
+.frasesolucion {
+   /* border: 5px solid black;*/
+   font-size: 30px;
+    margin-top: 20px;
+    padding-top: 10px;
+    
+}
+.parrafo{
+    margin-left: 40px;
+    padding-right: 40px;
+}
 .thumb img{
 width: 100%;
 }
@@ -179,6 +202,9 @@ width: 100%;
     font-weight: 400;
     
 }
+
+
+
 .clientestitulo{
     margin-bottom: 40px;
 }
@@ -196,6 +222,7 @@ width: 100%;
 
 .pnegocio{
     color: white;
+    margin-top: 50px;
 
 }
 
@@ -228,9 +255,11 @@ width: 100%;
 
 
 .foto_cliente img{
-    border-radius:50%;
-    vertical-align: top;
+    border-radius:150%;
+    
+    
 }
+
 
 
 
@@ -303,7 +332,7 @@ textarea {
 }
 
 
-/* SOCIAL */
+/* FOOTER */
 
 .final{
     text-align: center;
@@ -316,7 +345,14 @@ textarea {
     width: 25%;
     max-width: 150px;
     
+}.
+
+.final a{
+    color: rgb(0, 0, 0);
+   
 }
+
+
 
 /*.social a{
   background: rgb(255, 255, 255);
