--- a/style.css
+++ b/style.css
@@ -96,6 +96,13 @@ header .img-wrapper{
 
 /* Después slide*/
 
+.foto_inicio img{
+    
+    margin-left: 00px;
+    
+    
+}
+
 .imagen_scroll{
     background: linear-gradient(to top,  rgb(214, 97, 97) 0%, #f5f2f2 100%);    
     
@@ -201,6 +208,8 @@ width: 100%;
     font-family:"Open Sea", Arial, Helvetica, sans-serif;
     font-weight: 400;
     
+    
+    
 }
 
 
@@ -223,6 +232,7 @@ width: 100%;
 .pnegocio{
     color: white;
     margin-top: 50px;
+    margin-top: auto;
 
 }
 
@@ -347,10 +357,7 @@ textarea {
     
 }.
 
-.final a{
-    color: rgb(0, 0, 0);
-   
-}
+
 
 
 
@@ -395,4 +402,4 @@ textarea {
     }
   }
 
-
+ 
